# movies-bot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
admin-panel/: package-lock.json  package.json  tailwind.config.ts
admin-panel/app/: globals.css  layout.tsx
admin-panel/app/(dashboard)/: layout.tsx  page.tsx
admin-panel/app/login/: page.tsx
admin-panel/components/: pagination-bar.tsx  sidebar.tsx  theme-toggle.tsx
admin-panel/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  label.tsx  select.tsx  table.tsx  textarea.tsx
admin-panel/lib/: api.ts  auth.ts  theme.ts  types.ts  utils.ts
alembic/: env.py
alembic/versions/: 261f345a9c36_add_poster_file_id_to_movies_and_series.py  4ab4f34687b0_add_source_channel_to_movies_and_series.py  7d9557bef1bd_add_series_and_seasons.py  a9b71f656617_initial_schema.py
app/: api_main.py  bot_main.py
app/api/: rate_limit.py
app/api/dependencies/: auth.py  db.py  pagination.py
app/api/routes/: admins.py  audit_logs.py  auth.py  broadcasts.py  categories.py  channels.py  movies.py  premium.py  series.py  settings.py  stats.py  users.py
app/api/schemas/: admin.py  audit_log.py  auth.py  broadcast.py  category.py  channel.py  common.py  movie.py  premium.py  series.py  settings.py  stats.py  user.py
app/bot/: routers.py
app/bot/filters/: __init__.py  admin.py
app/bot/keyboards/: admin_panel.py  admin_settings.py  broadcast.py  category.py  channel.py  movie.py  (+4 more)
app/core/: config.py  constants.py  i18n.py  logger.py  metrics.py  permissions.py  security.py  sentry.py
app/database/: redis_client.py  session.py
app/scheduler/: __init__.py  jobs.py
app/tests/: conftest.py
docker/: Dockerfile  Dockerfile.admin  prometheus.yml
docs/: TZ.md
nginx/: nginx.conf
scripts/: backfill_channels.py  backup.sh  deploy.sh  merge_duplicate_series.py  restore.sh  seed.py
(+118 files in other folders)
