[project]
name = "movie-platform"
version = "0.1.0"
description = "Telegram Media Platform — bot, API, admin panel"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4 (last release, effectively unmaintained) crashes at
    # backend-init time on bcrypt>=4.0: its wraparound-bug self-test hashes a
    # >72-byte probe string, which bcrypt>=4.0 rejects with ValueError instead
    # of the old silent truncation. Pinned <4.0 until passlib ships a fix.
    "bcrypt>=3.2,<4.0",
    "pyjwt>=2.9",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "prometheus-client>=0.20",
    "sentry-sdk[fastapi]>=2.13",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "aiosqlite>=0.20",
]
# Only for scripts/backfill_channels.py — a one-off userbot script, not part
# of the bot/API/admin-panel runtime, so this stays out of the main
# dependency list.
backfill = [
    "telethon>=1.36",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["app/tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
